--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<!doctype html>
-<html lang="en">
-    <head><meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Bingo</title>
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/6.0.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-        <link href="" rel="stylesheet">
-    </head>
+<!doctype html><html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Bingo</title>
+    <link rel="shortcut icon" href="./bolas.ico" type="image/x-icon">
     <body>
         <div id="root"></div>
-    <link rel="stylesheet" href="static/css/main.7c032e31.css">
-    <script defer="defer" src="static/js/main.ef570d8c.js"></script>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/6.0.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <script defer="defer" src="/Bingo/static/js/main.aa6e6e86.js"></script>
+    <link href="/Bingo/static/css/main.735ca49c.css" rel="stylesheet"></head>
 </body>
 </html>
-<!-- ./static/js/main.ef570d8c.js -->
-<!-- /static/css/main.7c032e31.css -->
