--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Bingo</title>
     <link rel="shortcut icon" href="./bolas.ico" type="image/x-icon">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/6.0.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div>
-    
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/6.0.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+
     <script defer="defer" src="/Bingo/static/js/main.aa6e6e86.js"></script>
-    <link href="/Bingo/static/css/main.735ca49c.css" rel="stylesheet">
+    <link href="/static/css/main.735ca49c.css" rel="stylesheet">
 </body>
 </html>
