--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Bingo</title><link href="//netdna.bootstrapcdn.com/twitter-bootstrap/6.0.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet"><link rel="shortcut icon" href="./bolas.ico" type="image/x-icon"><script defer="defer" src="/Bingo/build/index.html/static/js/main.47ad36fa.js"></script><link href="/Bingo/build/index.html/static/css/main.735ca49c.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="pt-br"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Bingo</title>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/6.0.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./bolas.ico" type="image/x-icon">
+
+    <link href="./static/css/main.735ca49c.css" rel="stylesheet">
+
+    </head>
+<body>
+    <div id="root"></div>
+
+
+
+    <script defer="defer" src="./static/js/main.47ad36fa.js"></script>
+</body></html>
